<resources>
    <!--Menu text-->
    <string name="LogOut">Se déconnecter</string>
    <string name="backAccueil">Revenir à la page accueil</string>
    <!--Login text-->
    <string name="app_name">JEYBOX</string>
    <string name="Connect">Se connecter</string>
    <string name="User">Utilisateur</string>
    <string name="Password">Mot de passe</string>
    <string name="LogoDes">Logo JEYBOX</string>
    <string name="ForgotPass"><u>Mot de passe oublié ?</u></string>
    <!--ForgotPassword text-->
    <string name="Mail">Adresse courriel</string>
    <string name="NewPassword">Nouveau mot de passe</string>
    <string name="ConfirmPass">Confirmer le mot de passe</string>
    <string name="Send">Envoyer</string>
    <string name="Error">Les mots de passe ne correspondent pas</string>
    <!--accueil text-->
    <string name="Article">Articles</string>
    <string name="ConsultArticles">Consulter les articles</string>
    <string name="Reservations">Réservations</string>
    <string name="ConsulterReservations">Consulter les réservations</string>
    <string name="ModifierReservations">Modifier les réservations</string>
    <!--consulter_reservation text-->
    <string name="user">Utilisateur</string>
    <string name="idArticle">ID Article</string>
    <string name="testUser">Clement Burch</string>
    <string name="testID">RPI-2020</string>
    <string name="back">Retour</string>
    <!--modifier_article-->
    <string name="testCategorie">Câble</string>
    <string name="testNomArticle">Raspberry Pi HDMI cable</string>
    <string name="ArticleDes">Image article</string>
    <!-- modifier_reservation -->
    <string name="ModifierRes">Modifier des réservations</string>
    <string name="Ajouter">Ajouter</string>
    <string name="Supprimer">Supprimer</string>
    <string name="NomClient">Nom client :</string>
    <string name="ArticleRes">Articles Réservés :</string>
    <string name="nb">Nombre :</string>
    <string name="intTest">2</string>
    <!-- Notification -->
    <string name="notif">Notification</string>
    <!-- Spinner values -->
    <string-array name="spinnerValues">
        <item>A-Z</item>
        <item>Z-A</item>
        <item>Plus récent</item>
        <item>Plus ancien</item>
    </string-array>

</resources>
