<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223142">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/LogoDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/small_logo" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="394dp"
        android:layout_height="535dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="50dp">

            <Switch
                android:id="@+id/swcAj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:checked="true"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/Ajouter"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />

            <Switch
                android:id="@+id/swcSup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginLeft="40dp"
                android:checked="false"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/Supprimer"
                android:textColor="#FFFFFF"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout4"
            android:layout_width="411dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/NomClient"
                android:fontFamily="@font/oxygen_bold"
                android:textSize="16sp"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/txtClient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/testUser"
                android:text="@string/testUser"
                android:fontFamily="@font/oxygen_bold"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:autofillHints="@string/testUser" />

            <TextView
                android:id="@+id/lblArticle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/ArticleRes"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/txtArticleID"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/testID"
                android:text="@string/testID"
                android:fontFamily="@font/oxygen_bold"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:autofillHints="@string/testID" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="413dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblNombre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="end"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/nb"
                android:textColor="#FFFFFF"
                android:textSize="17sp" />

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autofillHints="@string/intTest"
                android:ems="10"
                android:fontFamily="@font/oxygen_bold"
                android:gravity="center"
                android:hint="@string/intTest"
                android:inputType="number"
                android:text="@string/intTest"
                android:textColor="#FFFFFF"
                android:textSize="18sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:background="@drawable/my_button_bg"
                android:fontFamily="@font/oxygen_bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/my_button_bg"
                android:fontFamily="@font/oxygen_bold"
                android:text="@string/Ajouter"
                android:textColor="#FFFFFF"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/ModifierRes"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>