<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223142">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="326dp"
        android:layout_height="145dp"
        android:contentDescription="@string/LogoDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/JEYBOX_Logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="326dp"
        android:layout_height="244dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo"
        app:layout_constraintVertical_bias="0.137">

        <TextView
            android:id="@+id/lblArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:fontFamily="@font/oxygen_bold"
            android:gravity="center"
            android:text="@string/Article"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnArticles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/my_button_bg"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/ConsultArticles"
            android:textColor="#FFFFFF" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="326dp"
        android:layout_height="245dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:layout_marginBottom="43dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/lblReservations"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/oxygen_bold"
            android:gravity="center"
            android:text="@string/Reservations"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnReservation1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/my_button_bg"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/ConsulterReservations"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnReservation2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/my_button_bg"
            android:fontFamily="@font/oxygen_bold"
            android:text="@string/ModifierReservations"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>