<?xml version="1.0" encoding="utf-8"?>
<!--/****************************************
    Fichier :          forgot_password.xml
    Auteur :           Jérôme Nadeau
    Fonctionnalité :   UI qui permet de reset le mot de passe de l'utilisateur.
    Date :             2020/05/05

    Vérification :
    Date               Nom                   Approuvé
    =========================================================


    Historique de modifications :
    Date               Nom                   Description
    =========================================================

    ****************************************/-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223142">

    <Button
        android:id="@+id/btnSend"
        android:layout_width="247dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:background="#f0b634"
        android:text="@string/Send"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtConfirmPass" />

    <EditText
        android:id="@+id/txtNewPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="@string/NewPassword"
        android:hint="@string/NewPassword"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/txtMail"
        app:layout_constraintTop_toBottomOf="@+id/txtMail" />

    <EditText
        android:id="@+id/txtConfirmPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/ConfirmPass"
        android:hint="@string/ConfirmPass"

        android:ems="10"
        android:inputType="textPassword"
        android:textColor="#FFFFFF"
        app:layout_constraintStart_toStartOf="@+id/txtNewPass"
        app:layout_constraintTop_toBottomOf="@+id/txtNewPass" />

    <EditText
        android:id="@+id/txtMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="59dp"
        android:autofillHints="@string/Mail"
        android:hint="@string/Mail"
        android:ems="10"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:contentDescription="@string/LogoDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/small_logo" />

</androidx.constraintlayout.widget.ConstraintLayout>