<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223142">

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/LogoDes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/small_logo" />

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="394dp"
        android:layout_height="535dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <LinearLayout
            android:layout_width="409dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:orientation="horizontal"
            android:layout_marginStart="50dp">

            <Switch
                android:id="@+id/swcAj"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/Ajouter"
                android:fontFamily="@font/oxygen_bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="20dp" />

            <Switch
                android:id="@+id/swcSup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:checked="true"
                android:text="@string/Supprimer"
                android:fontFamily="@font/oxygen_bold"
                android:textSize="20sp"
                android:textColor="#FFFFFF"
                android:layout_marginStart="40dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <TextView
                android:id="@+id/lblUser"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:gravity="center"
                android:text="@string/User"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbIDArticle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:background="@drawable/back"
                android:gravity="center"
                android:text="@string/idArticle"
                android:textColor="#000000"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTest1"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/testUser"
                android:textColor="#000000"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/lblTest2"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/testID"
                android:textColor="#000000"
                android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblTest3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/testUser"
                android:textColor="#000000"
                android:textSize="14sp" />


            <TextView
                android:id="@+id/lblTest4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/testID"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="408dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/back"
                android:textColor="#FFFFFF"
                android:background="@drawable/my_button_bg"
                android:fontFamily="@font/oxygen_bold"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/btnOk"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Supprimer"
                android:textColor="#FFFFFF"
                android:background="@drawable/my_button_bg"
                android:fontFamily="@font/oxygen_bold"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/ModifierRes"
        android:fontFamily="@font/oxygen_bold"
        android:textSize="20sp"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

</androidx.constraintlayout.widget.ConstraintLayout>