<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#223142">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="326dp"
        android:layout_height="145dp"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/LogoDes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/JEYBOX_Logo" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="584dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/lblReservation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/oxygen_bold"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/Reservations" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblUser"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/User"
                android:textColor="#000000"
                android:background="@drawable/back"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/lbIDArticle"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/idArticle"
                android:textColor="#000000"
                android:background="@drawable/back"
                android:textSize="16sp" />
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:background="#FFFFFF">

                <TextView
                    android:id="@+id/lblTest1"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_marginLeft="5dp"
                    android:layout_weight="1"
                    android:text="@string/testUser"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    android:layout_marginStart="5dp" />

                <TextView
                    android:id="@+id/lblTest2"
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/testID"
                    android:textColor="#000000"
                    android:textSize="14sp" />
            </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="#FFFFFF">

            <TextView
                android:id="@+id/lblTest3"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/testUser"
                android:textColor="#000000"
                android:textSize="14sp"
                android:layout_marginStart="5dp" />


            <TextView
                android:id="@+id/lblTest4"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:text="@string/testID"
                android:textColor="#000000"
                android:textSize="14sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>